bleme/dashboard/base/resources/mwr.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-dashboard
spec:
  basicAuth:
    secret: secret-auth-dashboard
